add publication titles into the banner images

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,19 +3,31 @@
 	{% assign sorted_publications = (site.publications | sort: 'year' %}
     {% for publication in sorted_publications reversed%}
     {% if forloop.index == 1 %}
-    <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
+    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="left-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
+      <span id="left-banner-image-title" class="banner-image-title">
+        {{publication.title}}
+      </span>
+    </a>
     {% endif %}
     {% if forloop.index == 2 %}
-    <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
+    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="top-right-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
+      <span id="top-right-banner-image-title" class="banner-image-title">
+        {{publication.title}}
+      </span>
+    </a>
     {% endif %}
     {% if forloop.index == 3 %}
-    <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
+    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="bottom-right-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
+      <span id="bottom-right-banner-image-title" class="banner-image-title">
+        {{publication.title}}
+      </span>
+    </a>
     {% endif %}
     {% endfor %}
 </div>
