added large figures for my main papers

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,7 @@
     {% if forloop.index == 1 %}
     <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="left-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image_large }}">
       <span id="left-banner-image-title" class="banner-image-title">
         {{publication.title}}
       </span>
