--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,34 +1,52 @@
 <div class="banner">
-	<div class="home-image">
-	{% assign sorted_publications = (site.publications | sort: 'year' %}
-    {% for publication in sorted_publications reversed%}
-    {% if forloop.index == 1 %}
-    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
-                                                           class="left-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image_large }}">
-      <span id="left-banner-image-title" class="banner-image-title">
-        {{publication.title}}
-      </span>
-    </a>
-    {% endif %}
-    {% if forloop.index == 2 %}
-    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
-                                                           class="top-right-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
-      <span id="top-right-banner-image-title" class="banner-image-title">
-        {{publication.title}}
-      </span>
-    </a>
-    {% endif %}
-    {% if forloop.index == 3 %}
-    <a class="banner-image" href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
-                                                           class="bottom-right-banner-image"
-                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}">
-      <span id="bottom-right-banner-image-title" class="banner-image-title">
-        {{publication.title}}
-      </span>
-    </a>
-    {% endif %}
-    {% endfor %}
-</div>
+    <div class="home-image">
+        <div id="main-banner-image">
+            <a class="banner-image" href="">
+                <img alt="" class="left-banner-image" src="{{ site.baseurl }}/assets/images/papers/"/>
+                <span id="left-banner-image-title" class="banner-image-title"></span>
+            </a>
+        </div>
+
+        <div id="top-right-banner-image">
+            <a class="banner-image" href=""><img alt="" class="top-right-banner-image"
+                                                 src="{{ site.baseurl }}/assets/images/papers/">
+                <span id="top-right-banner-image-title" class="banner-image-title"></span>
+            </a>
+        </div>
+
+        <div id="bottom-right-banner-image">
+            <a class="banner-image" href=""><img alt="" class="bottom-right-banner-image"
+                                                 src="{{ site.baseurl }}/assets/images/papers/">
+                <span id="bottom-right-banner-image-title" class="banner-image-title"></span>
+            </a>
+        </div>
+
+
+        <script src="http://code.jquery.com/jquery-latest.min.js"
+                type="text/javascript"></script>
+        <script>
+            publications.sort(function () {
+                return .5 - Math.random();
+            });
+
+            var i = 0;
+            ["#main-banner-image", "#top-right-banner-image", "#bottom-right-banner-image"].forEach(function (id) {
+
+                var pub = publications[i];
+                i++;
+                var bannerImg = $(id + " img");
+                bannerImg.attr("alt", pub.shortname)
+
+                var src = bannerImg.attr("src");
+                bannerImg.attr("src", src + pub.image_large);
+
+                var bannerLink = $(id + "  a")
+                bannerLink.attr("href", pub.url);
+
+                var bannerText = $(id + " span")
+                bannerText.text(pub.title);
+            });
+
+        </script>
+    </div>
 </div>
