--- a/css/site.scss
+++ b/css/site.scss
@@ -1043,6 +1043,9 @@ iframe {
     .dot {
       margin: 0 1px 0 1px;
     }
+    @include media($small-display) {
+      display: none;
+    }
   }
   
   .interests {
@@ -1073,6 +1076,10 @@ iframe {
   padding: 50px 0 50px 0;
   width: 100%; 
   min-height: 50px;
+  @include media($small-display) {
+    margin-top: 60px;
+    margin-bottom: -30px;
+  }
 }
 
 .publication-content-main {
