adjust size of publication images for small screens, addresses #18

--- a/css/site.scss
+++ b/css/site.scss
@@ -752,11 +752,10 @@ ul.post-list {
 	margin-bottom: 20px;
     @include box-shadow( 1px, 1px, 4px, transparentize( black, 0.75) );
     @include border-radius( 3px );
-
-    /*
-    @include span-columns(2);
-    @include single-column-content();
-    */
+    
+    @include media($small-display) {
+      width: 175px;
+    }
 }
 
   p.pubs {
