added link back to news at bottom of each news post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ title: Post | Caleydo
         </span>              
       </li>
   </ul>
-
+  <p style="font-family:$condensed-font-family;"><b><a href="{{ site.baseurl }}/news">See All News</a></b></p>
   </article>
 
 </div>
