--- a/css/site.scss
+++ b/css/site.scss
@@ -374,7 +374,7 @@ body {
     bottom: 0;
     content: '';
     width: 100%;
-    border-bottom-width: 1px;
+    border-bottom-width: 1px; 
     border-bottom-style: dotted;
     display: inline;
 	color: #E64C3C;
@@ -553,6 +553,13 @@ body {
   @include page-meta();
 }
 
+a.all-news-link{
+	font-family: $condensed-font-family;
+	font-size:1em;
+	font-weight: 700;
+	color: #2C3E50;
+}
+
 ul.post-list {
   @extend ul;
   margin: 0;
@@ -561,6 +568,7 @@ ul.post-list {
 
   a.post-list-link {
     font-style: italic;
+	font-size:0.9em;
     color: #444;
     position: relative;
     text-decoration: none;
@@ -572,7 +580,7 @@ ul.post-list {
     content: '';
     width: 100%;
     border-bottom-width: 1px;
-    border-bottom-style: solid;
+    //border-bottom-style: solid;
   }
 
   .post-list-item {
