--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ title: Post | Caleydo
         </span>              
       </li>
   </ul>
-  <p><a class="all-news-link" href="{{ site.baseurl }}/news">See All News</a></p>
+  <div class="all-news-link"><a class="all-news-link" href="{{ site.baseurl }}/news">See All News</a></div>
 </article>
 
 </div>
