--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -5,7 +5,7 @@ $base-font-family: $sans-serif;
 
 // Sizes
 $base-font-size: 1em;
-$base-line-height: $base-font-size * 1.5;
+$base-line-height: $base-font-size * 1.3;
 $unitless-line-height: $base-line-height / ($base-line-height * 0 + 1); // Strip units from line-height: https://developer.mozilla.org/en-US/docs/Web/CSS/line-height#Prefer_unitless_numbers_for_line-height_values
 $title-line-height: $base-font-size * 1.25;
 $base-border-radius: em(3);
@@ -21,7 +21,7 @@ $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 $blue2:#3376A0;
-
+$dark-blue:#2C3E50;
 
 //$home-color: #AD3A33;
 $home-color: #C03A2B;
