--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h5 {
   font-weight: $content-title-font-weight;
   font-style: $content-title-font-style; 
   color:#2C3E50;
+  margin-top: 15px;
   margin-bottom: 10px;
   //padding-left: 5px;
   padding-bottom: 0px;
@@ -69,7 +70,7 @@ h1, h2, h3, h4, h5, h5 {
 
 h1 {
   //font-size: $base-font-size * 1.75; // 16 * 2.25 = 36px
-  font-size: $base-font-size * 1.2; 
+  font-size: $base-font-size * 1.3; 
   //border-bottom: 2px $light-gray solid;
 }
 
