added missing space in Project Website text generation, and updated CSS into redesign specs

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -78,7 +78,7 @@ layout: default
     <ul>
             
 		    <li>
-		      <i class="fa fa-sitemap"></i> &nbsp;<a href="{{page.external-project}}">{{ page.shortname }}Website</a></li>
+		      <i class="fa fa-sitemap"></i> &nbsp;<a class="project-website" href="{{page.external-project}}">{{ page.shortname }} Website</a></li>
 		    </li>
     </ul>
     {% endif %}
