--- a/css/site.scss
+++ b/css/site.scss
@@ -371,15 +371,16 @@ body {
     //color: $blue2;
     position: relative;
     text-decoration: none;
-	border-bottom: dotted 1px #E64C3C;
+	border-bottom: dotted 1px #E64C3C; //note: use of :after code below unfortuenatly doesn't work with line breaks... using fall-back 
   }
-  a:hover {
-	border-bottom-color: transparent;
+  a:hover{
+  	border-bottom-color: transparent;
   }
+  
 //  a:after{
 //    position: absolute;
 //    left: 0;
-//    bottom: 0;
+//    bottom: 2px;
 //    content: '';
 //    width: 100%;
 //    border-bottom-width: 1px;
@@ -387,6 +388,10 @@ body {
 //    display: inline;
 //	color: #E64C3C;
 //  }
+//  a:hover:after{
+//	color: transparent;
+//  }
+  
 }
 
 @mixin reverse-dotted-link-underline() {
