--- a/_sass/base/_lists.scss
+++ b/_sass/base/_lists.scss
@@ -81,8 +81,8 @@ ul, ol {
 
       li {
         padding-left: -0.1em;
-        //padding-bottom: 0.5em;
-        line-height: $base-font-size * 1.2;
+        padding-bottom: 0.2em;
+        line-height: $base-font-size * 1.1;
         vertical-align: top;
 		//text-align:right;
         color: $base-font-color;
