re-worked banner: closer to original design spec and slight improvments in responsive handling

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,8 +10,8 @@
 
         <div id="top-right-banner-image">
             <a class="banner-image" href="">
+                <span id="top-right-banner-image-title" class="banner-image-title"></span>
                 <img alt="" class="top-right-banner-image" src="{{ site.baseurl }}/assets/images/papers/">
-                <span id="top-right-banner-image-title" class="banner-image-title"></span><br>
             </a>
         </div>
 
