updated paper title section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@
 
   <article class="home-content-aside">
 	  
-	  <h1>Recent</h1>
+	  <h1>Recent Papers</h1>
 	  	  
 	      <ul class="publication-icon-list">
 	          {% assign sorted_publications = (site.publications | sort: 'year' %}
