--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
     <div class="footer-disclaimer">
       <p>
         Copyright &copy; 2016 The Visualization Design Lab. All content on this website is licensed under the <br />
-        <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license (CC BY)</a>. Copyright of the linked papers is with the publishers.
+        <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license (CC BY)</a>. Copyright of the linked papers is with the publishers. Logo by <a href="http://www.antarctic-design.co.uk">Antarctic Design</a>.
       </p>
     </div>
 
