--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,11 +78,11 @@
 	  <h1>Recent Papers</h1>
 	  	  
 	      <ul class="publication-icon-list">
-	          {% assign sorted_publications = (site.publications | sort: 'year' %}
-	          {% for publication in sorted_publications reversed%}
+              {% assign sorted_publications = (site.publications | sort: 'year' %}
+	          {% for publication in sorted_publications reversed %}
 	          {% if publication.year > 2014 %}
-	          <li><div style="padding-right: 1.5em;"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></div><div class="right-text">{{publication.year}}</div></li>
-	          {% endif %}
+	          <li><div style="padding-right: 1.5em;"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></div><div style="margin-bottom: 5px;">{{publication.journal-short}}, {{publication.year}}</div></li>
+              {% endif %}
 	          {% endfor %}
 	      </ul>
 	  	  
