changed masters to master's

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -38,7 +38,7 @@ layout: default
       
       {% if ifmsstudent == 'true' %}
         <p class="space">&nbsp;</p>
-        <h1>Masters Students</h1>
+        <h1>Master's Students</h1>
 
         {% include person.html role="msstudent" %}
       {% endif %}
