--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -66,7 +66,7 @@ layout: default
     <h1>Software</h1>
     <ul class="project-icon-list">
     {% for project in site.projects %}
-    {% if project.key == page.project) %}
+    {% if project.key == page.project %}
       <li><a href="{{ site.baseurl }}{{ project.url}}">{{ project.name }}</a><br>{{ project.title }}</li>
     {% endif %}
     {% endfor %}
