--- a/css/site.scss
+++ b/css/site.scss
@@ -537,33 +537,6 @@ body {
   @include page-meta();
 }
 
-.team-content {
-  @include page-content();
-  margin-bottom:100px;
-}
-
-.alumni-content {
-  @include page-content();
-  font-size: $page-title-font-size * 0.35;
-}
-
-.team-content-left {
-  @include page-content();
-  @include span-columns(6);
-}
-
-.team-content-right {
-  @include page-content();
-  @include span-columns(6);
-  @include omega();
-}
-
-.team-meta {
-  @include page-meta();
-  @include span-columns(12);
-  @include omega();
-}
-
 .funding-content {
   @include page-content();
   @include span-columns(12);
@@ -773,52 +746,6 @@ ul.post-list {
   -moz-box-shadow: $top $left $blur $color #{$inset};
   box-shadow: $top $left $blur $color #{$inset};
 }
-
-.person-container
-{
-  height: 60px;
-  vertical-align: middle;
-}
-
-.person-img {
-  filter: gray;
-  border-style: solid;
-  padding: 1px;
-  &.color0 {
-    border-color: #C03A2B;
-  }
-  &.color1 {
-    border-color: #3476A0;
-  }
-  &.color2 {
-    border-color: #2C3E50;
-  }
-  &.color3 {
-    border-color: #E66558;
-  }
-}
-
-.person-image {
-  width: 100px;
-  height: 100px;
-  @include border-radius( 50% );
-  &.offset0 {
-    margin-bottom: 65px;
-  }
-}
-
-.person-image-small {
-  @extend .person-image;
-  width: 70px;
-  height: 70px;
-  margin-right: -10px;
-  margin-bottom: 25px;
-  &.offset0 {
-    margin-bottom: 75px;
-  }
-}
-
-
 
 .paper-list-block{
   min-height: 120px;
@@ -1109,58 +1036,6 @@ iframe {
   }
 }
 
-.team-content {
-  .space {
-    line-height: 0;
-  }
-  .space-alumni {
-    margin: auto;
-    width: 85%;
-    border-bottom: 2px solid $footer-border-color;
-    margin-bottom: 20px;
-  }
-}
-
-.person-list-block {
-  @include outer-container;
-  @include span-columns(12);
-  margin: 0 0 0 20px;
-  padding-bottom: 3px;
-  padding-top: 3px;
-  display: block;
-  min-height: 50px;
-  
-  .name {
-    @include span-columns(6 of 16);
-    font-weight: 400;
-  }
-  
-  .spacer {
-    float: right;
-    margin-top: -3px;
-    font-size: $page-content-font-size * 1.15;
-    font-weight: 700;
-    color: #3476A0;
-    .dot {
-      margin: 0 1px 0 1px;
-    }
-    @include media($small-display) {
-      display: none;
-    }
-  }
-  
-  .interests {
-    @include span-columns(10 of 16);
-    font-family: $condensed-font-family;
-    font-size: $page-content-font-size * 0.75;
-    line-height: 1;
-  }
-  
-  .alumni {
-    @include span-columns(5 of 16);
-  }
-}
-
 .rule {
   display: block;
   border-top: 4px solid $footer-border-color;
@@ -1169,18 +1044,6 @@ iframe {
   height:24px;
   padding-top:20px;
   padding-bottom:5px;
-}
-
-.banner-team {
-  display: block;
-  margin: 30px 0 -20px 0;
-  padding: 50px 0 50px 0;
-  width: 100%; 
-  min-height: 50px;
-  @include media($small-display) {
-    margin-top: 60px;
-    margin-bottom: -30px;
-  }
 }
 
 .publication-content-main {
@@ -1243,4 +1106,7 @@ iframe {
     height: 60px;
   }
 }
+
+// team page in separate sass file
+@import '../css/team';
 
