--- a/css/team.scss
+++ b/css/team.scss
@@ -83,8 +83,11 @@
   padding: 50px 0 50px 0;
   width: 100%; 
   min-height: 50px;
+  @include media($medium-display) {
+    width: 75%;
+  }
   @include media($small-display) {
-    margin-top: 60px;
+    margin-top: 90px;
     margin-bottom: -30px;
   }
 }
