--- a/css/team.scss
+++ b/css/team.scss
@@ -1,6 +1,9 @@
 .team-content {
   @include page-content();
   margin-bottom:100px;
+  @include media($small-display){
+    margin-bottom: 0px;
+  }
 }
 
 .team-content-left {
@@ -74,6 +77,12 @@
   
   .alumni {
     @include span-columns(5 of 16);
+    @include media($medium-display){
+      width: 45%;
+    }
+    @include media($small-display){
+      @include span-columns(4)
+    }
   }
 }
 
