--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -15,10 +15,12 @@ layout: default
       {% if person.graduated == null %}
         {% if person.role == 'phdstudent' %}
           {% assign ifphdstudent = 'true' %}
+        {% elsif person.role == 'postdoc' %}
+            {% assign ifpostdoc = 'true' %}
         {% elsif person.role == 'msstudent' %}
-          {% assign ifmsstudent = 'true' %}
+            {% assign ifmsstudent = 'true' %}
         {% elsif person.role == 'undergrad' %}
-          {% assign ifundergrad = 'true' %}
+            {% assign ifundergrad = 'true' %}
         {% endif %}
       {% endif %}
     {% endfor %}
@@ -28,7 +30,15 @@ layout: default
 
       {% include person.html key="meyer" %}
       {% include person.html key="lex" %}
-      
+
+      {% if ifpostdoc == 'true' %}
+      <p class="space">&nbsp;</p>
+      <h1>Post-Doctoral Fellows</h1>
+
+      {% include person.html role="postdoc" %}
+      {% endif %}
+
+
       {% if ifphdstudent == 'true' %}
         <p class="space">&nbsp;</p>
         <h1>PhD Students</h1>
