worked on adding personal pages to website

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="publication">
 	
-	<header class="publication-title"><h1>{{ page.title | remove: "| Vis Design Lab" }}</h1></div>
+  <header class="publication-title"><h1>{{ page.title | remove: "| Vis Design Lab" }}</h1></header></div>
 
   <article class="publication-content-main">
     <h1>Abstract</h1> 
