--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -5,39 +5,89 @@ layout: default
 
 <div class="person">
     <header class="person-title"><h1>{{page.first_name}} {{page.last_name}}</h1></header>
+
 </div>
 
+
 <article class="publication-content-main">
+
+
     {{ page.content }}
 
-    <h2>Publications</h2>
+    <br>
+    <div stye="width:100%, float:none">
+    <span class="home-button nav-text">
+    <a href="#publications">Publications</a>
+    </span>
+        <span class="home-button nav-text">
+    <a href="#talks">Talks</a>
+    </span>
+        <span class="home-button nav-text">
+    <a href="#teaching">Teaching</a>
+    </span>
+        <span class="home-button nav-text">
+    <a href="#press">Press</a>
+    </span>
+    </div>
+    <br>
+
+
+</article>
+
+
+<article class="publication-content-aside">
+    <img alt="{{ page.first_name }} {{ page.last_name }}" class="person-img color0 person-image-large"
+         title="{{ page.first_name }} {{ page.last_name }}" src="{{ site.baseurl }}{{ page.image }}">
+    <br>
+
+    {{ page.first_name }} {{ page.last_name }}, {{ page.title}} <br>
+    {{ page.position}} <br>
+    <p>
+        <b>Contact</b> <br>
+        <a href="mailto:{{ page.email }}">{{ page.email }}</a> <br>
+        {{ page.address }}
+    </p>
+
+    <p>
+
+        <a href="{{ page.gs }}">Google Scholar</a><br>
+        <a href="http://twitter.com/{{page.twitter}}">Twitter</a><br>
+        <a href="{{page.gh}}">GitHub</a><br>
+    </p>
+</article>
+
+
+<article  class="publication-content">
+
+
+    <h2 id="publications">Publications</h2>
     {% for publication in site.publications reversed %}
-        {% if publication.type == "paper" %}
-            {% for author in publication.authors %}
-                {% if author == page.key %}
-                    {% include publication_list_entry.html %}
-                {% endif %}
-            {% endfor %}
-        {% endif %}
+    {% if publication.type == "paper" %}
+    {% for author in publication.authors %}
+    {% if author == page.key %}
+    {% include publication_list_entry.html %}
+    {% endif %}
+    {% endfor %}
+    {% endif %}
     {% endfor %}
 
-    <h2>Talks</h2>
+    <h2 id="talks">Talks</h2>
     <h3>Invited Talks</h3>
     {% for talk in site.talks reversed %}
-        {% if talk.speaker == page.key %}
-            {% if talk.type == "invited" %}
-                {% include talk_entry.html %}
-            {% endif %}
-        {% endif %}
+    {% if talk.speaker == page.key %}
+    {% if talk.type == "invited" %}
+    {% include talk_entry.html %}
+    {% endif %}
+    {% endif %}
     {% endfor %}
 
     <h3>Paper Presentations</h3>
     {% for talk in site.talks reversed %}
-        {% if talk.speaker == page.key %}
-            {% if talk.type == "paper" %}
-            {% include talk_entry.html %}
-            {% endif %}
-        {% endif %}
+    {% if talk.speaker == page.key %}
+    {% if talk.type == "paper" %}
+    {% include talk_entry.html %}
+    {% endif %}
+    {% endif %}
     {% endfor %}
 
     <h3>Tutorials</h3>
@@ -49,14 +99,28 @@ layout: default
     {% endif %}
     {% endfor %}
 
+
+
+    <h2 id="teaching">Teaching</h2>
+
+    <h3>Current PhD Students</h3>
+
+    {% include students.html students=page.phd_students %}
+
+    <h3>Current PhD Rotation Students</h3>
+
+    {% include students.html students=page.phd_rotation_students %}
+
+    <h3>Current MS Students</h3>
+
+    {% include students.html students=page.ms_students %}
+
+    <h3>Former Students</h3>
+
+    {% include students.html students=page.former_students %}
+
+    <h2 id="Press">Press</h2>
+
 </article>
 
-<article class="publication-content-aside">
-    <img alt="{{ page.first_name }} {{ page.last_name }}" class="person-img person-image"
-         title="{{ page.first_name }} {{ page.last_name }}" src="{{ site.baseurl }}{{ page.image }}">
-    <br>
-    <b>Contact</b> <br>
-    <a href="mailto:{{ page.email }}">{{ page.email }}</a> <br>
-    {{ page.address }}
-</article>
 
